add modal for delete

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="dairy icon" type="image/png" href="/static/favicon.ico"/>
     <title>dairy_vue_ui</title>
   </head>
   <body>
