--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="dairy icon" type="image/png" href="/static/favicon.ico"/>
-    <title>dairy_vue_ui</title>
+    <title>My Dairy</title>
   </head>
   <body>
     <div id="app"></div>
